--- a/deploy/apps/kartograph/overlays/stage/kustomization.yaml
+++ b/deploy/apps/kartograph/overlays/stage/kustomization.yaml
@@ -4,11 +4,11 @@ namespace: kartograph-stage
 resources:
   - ../../base
   - route.yaml
-  - secret-provider-class.yaml
+  # secret-provider-class.yaml removed - using K8s auth method until CSI driver is available
 patches:
   - path: configmap-patch.yaml
   - path: resources-patch.yaml
-  - path: deployment-vault-patch.yaml
+  # deployment-vault-patch.yaml removed - using K8s auth method until CSI driver is available
 images:
   - name: quay.io/redhat-user-workloads/kartograph-tenant/kartograph-api
     newTag: 1.1.1
