update deployment to use uppercase keys and lowercase names

--- a/deploy/apps/kartograph/base/job-spicedb-migrate.yaml
+++ b/deploy/apps/kartograph/base/job-spicedb-migrate.yaml
@@ -46,8 +46,8 @@ spec:
           env:
             - name: SPICEDB_DATASTORE_ENGINE
               value: postgres
-            - name: SPICEDB_DATASTORE_CONN_URI
+            - name: datastore-uri
               valueFrom:
                 secretKeyRef:
                   name: kartograph-spicedb-credentials
-                  key: datastore-uri
+                  key: SPICEDB_DATASTORE_CONN_URI
