--- a/deploy/apps/kartograph/base/job-spicedb-migrate.yaml
+++ b/deploy/apps/kartograph/base/job-spicedb-migrate.yaml
@@ -46,7 +46,7 @@ spec:
           env:
             - name: SPICEDB_DATASTORE_ENGINE
               value: postgres
-            - name: datastore-uri
+            - name: SPICEDB_DATASTORE_CONN_URI
               valueFrom:
                 secretKeyRef:
                   name: kartograph-spicedb-credentials
